--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="hint_password">Password</string>
     <string name="title_remember_password">Remember password</string>
     <string name="title_login">Login</string>
+    <string name="grid">Grid</string>
+    <string name="list">List</string>
 </resources>
